
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef void u_char ;


 int htonl (int) ;
 scalar_t__ send (int,void*,int,int ) ;
 int std_err () ;
 int zip (void*,int,void*,int) ;

void scorched3d_send(int sd, u_char *pck, int len, u_char *buff, int buffsz) {
    int tmp,
            zlen;

    zlen = zip(pck, len, buff, buffsz);

    tmp = htonl(zlen + 4);
    if(send(sd, (void *)&tmp, 4, 0) < 0) std_err();

    tmp = htonl(len);
    if(send(sd, (void *)&tmp, 4, 0) < 0) std_err();

    if(send(sd, buff, zlen, 0) < 0) std_err();
}
